# open-flow

./: .gitignore  AGENTS.en.md  AGENTS.md  BMAD-QUICKSTART.md  README.md  install.sh
agents/: executeur.md  quality.md  refactoring.md  roadmap.md  tester.md  ui-designer.md
agents/en/: analyst.md  architect.md  bmad-master.md  coordinator.md  designer.md  dev.md  executor.md  maintainer.md  pm.md  quality.md  quick-flow.md  refactoring.md  roadmap.md  sm.md  tea.md  tech-writer.md  tester.md  ux-designer.md
agents/fr/: analyst.md  architect.md  bmad-master.md  coordinateur.md  designer.md  dev.md  executeur.md  maintainer.md  pm.md  quality.md  quick-flow.md  refactoring.md  roadmap.md  sm.md  tea.md  tech-writer.md  tester.md  ux-designer.md
config/: opencode.template.json
maintenance/metrics/: metrics-history.json
maintenance/templates/: report-template.md
mcp/notify/: configure.py
roadmap/: README.md  plan-01-notify-pyobjc.md  plan-02-notify-go.md  plan-04-notify-actions.md  plan-05-i18n.md  plan-06-analytics.md  plan-07-mcp-session-history.md  plan-08-notify-git-events.md  plan-12-agent-maintainer.md
roadmap/en/: README.md  plan-05-i18n.md  plan-06-analytics.md
roadmap/fr/: README.md  plan-05-i18n.md  plan-06-analytics.md
roadmap/plans/: plan-03-mcp-screenshot.md  plan-07-mcp-session-history.md  plan-09-mcp-lsmcp.md  (+4 more)
servers/: __init__.py
servers/notify/: README.md  __init__.py  configure.py  notifier.py  pyproject.toml  server.py
servers/notify/assets/: README.md
servers/screenshot/: README.md  __init__.py  configure.py  pyproject.toml  screenshotter.py  server.py
(+80 files in other folders)
