[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-notify"
version = "0.1.0"
description = "MCP server for cross-platform system notifications"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
include = ["*.py"]
