[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-screenshot"
version = "0.1.0"
description = "MCP server for screen and window capture on macOS"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[tool.hatch.build.targets.wheel]
include = ["*.py"]
